[package]
name = "file_limit"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rmw-lib/file_limit"
readme = "README.md"
description = "get the file open limit ( windows / mac / linux / freebsd )"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rlimit = "0.8.3"

[dev-dependencies]
anyhow = "1.0.58"
