[package]
name = "file_cache"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rmw-lib/file_cache"
readme = "README.md"
description = "cache file open handle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
err = { version = "0.0.5", package = "rmw_err" }
file_open_limit = "0.0.4"
stretto = { version = "0.5.1", features = ["async"] }

[dev-dependencies]
anyhow = "1.0.58"
